# cdmo

./: .dockerignore  .gitignore  DOCKER_COMMANDS.md  Dockerfile  ISSUES_FOUND.md  README.md  build-image.sh  docker_run.sh  pyproject.toml  refactoring.md  run.sh  run_all.sh  test_docker.sh
CP/: README.md  main.py  pyproject.toml
CP/instances/: test.mzn
docs/: document.md  search.md  spec.md
report/: Introduction+CP.tex  Introduction.tex  instances.md  mip_presolve_model.tex  report.tex  sat.tex  smt_presolve_model.tex
res/: max_n_summary.txt
res/CP/: 10.json  12.json  14.json  16.json  18.json  20.json  4.json  6.json  8.json
res/MIP/: 10.json  12.json  14.json  16.json  18.json  20.json  22.json  4.json  6.json  8.json
res/SAT/: 10.json  12.json  14.json  16.json  18.json  20.json  22.json  24.json  4.json  6.json  8.json
res/SMT/: 10.json  12.json  14.json  16.json  18.json  20.json  22.json  24.json  26.json  28.json  4.json  6.json  8.json
scripts/: max_n_report.py  results_table.py  smoke_registry.py
source/CP/: base.mzn  base_SB.mzn  base_SB_implicit.mzn  base_SB_implicit_ff.mzn  base_SB_implicit_ff_geometric.mzn  base_SB_implicit_ff_luby.mzn  circle_method.dzn  circle_method_SB_modified_new_sb.mzn  d_circle_method_SB_modified_new_sb.mzn  main.py  old_main.py  opt_base.mzn  opt_base_SB.mzn  opt_base_SB_implicit.mzn  opt_base_SB_implicit_luby.mzn  opt_base_SB_implicit_rr.mzn  sts.mzn
source/MIP/: sts_ortools.py
source/SMT/: from_z3__10.smt2  (+12 more)
sts_solver/: __init__.py  base_solver.py  config.py  exceptions.py  main.py  registry.py
(+76 files in other folders)
