[project]
name = "sts-solver"
version = "0.1.0"
description = "Sports Tournament Scheduling problem solver using CP, SAT, SMT, and MIP approaches"
authors = [
    {name = "CDMO Project Team", email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "z3-solver>=4.12.0",
    "pulp>=2.7.0",
    "ortools>=9.8.0",
    "pymzn>=0.18.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.17.0",
    "cvc5>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.scripts]
sts = "sts_solver.cli.main:cli"
